@@ -212,7 +212,6 @@ OPTTOPLEVELSTART=toplevel/opttopstart.cmo
 
 PERVASIVES=$(STDLIB_MODULES) outcometree topdirs toploop
 
-
 # The middle end (whose .cma library is currently only used for linking
 # the "ocamlobjinfo" program, since we cannot depend on the whole native code
 # compiler for "make world" and the list of dependencies for
@@ -311,3 +310,6 @@ partialclean::
 	rm -f driver/compdynlink.mli
 	rm -f driver/compdynlink.mlopt
 
+# Do not be tempted to make this PATCHES:=, it should be evaluated on demand!
+PATCHES=$(shell find patches -regex "patches/[a-z0-9+\#/-]+\.patched" \
+                             -printf ' "%f";' | sed -e "s/\.patched//g" | sort)
